fixed parallel scroling on mobiles on details page

--- a/styles/detail.css
+++ b/styles/detail.css
@@ -21,7 +21,7 @@
 }
 .detailsImageContainer img {
     border-radius: 30px;
-    width: 350px;
+    width: 100%;
     transition: all 0.4s ease-in-out 0.2s;
     z-index: 100;
 }
